# task_api

./: .dockerignore  .gitignore  Dockerfile  PROJEKT_STAND.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: database.py  main.py
app/models/: models.py
app/schemas/: schema.py
